# ETL

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_gtest.sh
compile_error_tests/: run_tests.sh
compile_error_tests/utils/TestNonCopyable/TestNonCopyable1/: main.cpp
compile_error_tests/utils/TestNonInstatiable/TestNonInstatiable01/: main.cpp
etl/: namespace_etl.hpp  various.hpp
etl/maths/: binary_functions.hpp  matrix.hpp  matrixhelper.hpp
etl/maths/kalman_filter/: kalmanfilter.hpp
etl/misc/: singleton.hpp
etl/physics/: quantity.hpp
etl/type_traits/: parameter_trait.hpp
etl/utils/: algorithms.hpp  crtp_clone.hpp  deep_ptr.hpp  defaultfactoryerrorpolicy.hpp  factory.hpp  functional.hpp  make_unique.hpp  namespace_utils.hpp  noncopiable.hpp  noncopyable.hpp  noninstantiable.hpp  pimpl.hpp  singleton.hpp
etl/utils/type_traits/: namespace_type_traits.hpp  parameter_trait.hpp
tests/: CMakeLists.txt  main.cpp  static_tests.cpp  test_algorithms.cpp  test_functional.cpp
